# cs_note

./: .gitignore  CS231A：Computer Vision, From 3D Reconstruction to Recognition.md  MIT18.06 Linear Algebra.md  dailynote.md  readme.md  动手学深度学习.md
ComputerVision/: CS231A：Computer Vision, From 3D Reconstruction to Recognition.md
Cuda/: Cuda手写神经网络.md
Cuda/cuda_handwrite_mlp/: Cuda手写神经网络.md
Cuda/cuda_handwrite_mlp/project/: .gitignore  CMakeLists.txt  readme.md  test  test.cpp
Cuda/cuda_handwrite_mlp/project/dataset/: data  data.csv  mnist
Cuda/cuda_handwrite_mlp/project/include/: activation.h  cuda_run.h  loss.h  matrix.h  mlp.h  optimizer.h
Cuda/cuda_handwrite_mlp/project/pytorch-check/: poly2.ipynb  poly3.ipynb  sgd.ipynb
Cuda/cuda_handwrite_mlp/project/src/: activation.cu  cuda_run.cu  loss.cu  main.cpp  main.cu  matrix.cpp  matrix.cu  mlp.cpp  mlp.cu
Cuda/cuda_zero/: cuda_zero.md
Cuda/cuda_zero/code/: CMakeLists.txt  main  main.cu  (+2 more)
DeepLearning/: Andrew_Ng _DL.md
DeepLearning/Andrew_Ng_DL/: Andrew_Ng _DL.md
DeepLearning/D2L/: bert.md  transformer.md  卷积神经网络.md  序列模型.md  序列模型初步.md  深度学习基础.md  现代序列模型.md  计算机视觉.md  计算机视觉代码实操.md
DeepLearning/MachineLearning2022Spring/: MachineLearning2022Spring.md
DeepLearning/Pytorch_小土堆/: Pytorch_小土堆.md
Math/: Linear_Algebra_for_ML.md  MIT18.06 Linear Algebra.md  Probability-and-Statistics.md
llm/ECNU-postgraduate-RAG/: app.ipynb  app.py  chains.ipynb  output  source.txt  test.ipynb  test.py
llm/langchain/: Langchain2.md  langchain.md
paper-note/毕业设计/: 基于扩展扫描区域的现场表计指针识别方法.md
workplace/: test.ipynb
(+65 files in other folders)
